Add colour to style.css

--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -10,7 +10,7 @@
   <body>
     <p class="red-line">Number 1 - I'm a class!</p>
     <div id="blue-text">Number 2 - I'm one ID.</div>
-    <p class="red-line">Number 3 - I'm a class, but cooler!</p>
+    <p class="red-line" class="big-boy">Number 3 - I'm a class, but cooler!</p>
     <div id="green-line">Number 4 - I'm another ID.</div>
     <p class="red-line">Number 5 - I'm a class!</p>
   </body>
