--- a/foundations/flex/03-flex-header-2/index.html
+++ b/foundations/flex/03-flex-header-2/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    
     <div class="header">
+      <div class="left">
       <div class="logo">
         LOGO
       </div>
@@ -17,6 +19,9 @@
         <li><a href="https://google.com">link-two</a></li>
         <li><a href="https://google.com">link-three</a></li>
       </ul>
+      </div>
+      </div>
+      <div class="right">
       <button class="notifications">
         1 new notification
       </button>
